Fix footer text alignment and link styles

--- a/_css/format.css
+++ b/_css/format.css
@@ -112,8 +112,8 @@ main .section-title {
 }
 
 footer {
-margin-top: 40px;
-text-align: left;
+  margin-top: 40px;
+  text-align: left;
 }
 
 footer .footer-text {
@@ -122,7 +122,9 @@ footer .footer-text {
   padding: 2px 0;
 }
 
-footer .footer-text {
+footer .footer-text a {
   color: #b3005e;
   font-weight: 600;
+  text-decoration: none;
 }
+
